[package]
name = "plushy"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Comfiest generational arenas for Rust."
authors = ["Jakub Arnold <darthdeus@gmail.com>"]
homepage = "https://docs.rs/plushy"
repository = "https://github.com/darthdeus/comfy"


[dependencies]
thunderdome = "0.6.1"
